# Mise_en_production_DS

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: deploy_pages.yml  docker.yml  docker_back.yml  docker_front.yml  prod.yml
app/: Dockerfile  api.py  run.sh
config_infer_llm/: llm_infer_config.json
data/: sample_argilla_num_raw_restricted.csv
deployment/: delpoyment.yaml  ingress.yaml  service.yaml
deployment_front/: deployment.yaml  ingress.yaml  service.yaml
frontend/: Dockerfile  app.py  requirements.txt
notebooks/: test.ipynb  test_classification.ipynb
prompts/: prompt_class_ia.txt  prompt_niv.txt  prompt_num.txt  prompt_thematique.txt
src/: classification.py  extraction.py  llm.py  llm_augment_data.py  llm_infer.py  logging_config.py  setup_logging.py  skill_normalizer.py  spacy_infer.py  test.py  train_spacy.py  utils.py
website/: .gitignore  _quarto.yml  about.qmd  index.qmd  styles.css
website/_site/: about.html  index.html  search.json  styles.css
website/_site/site_libs/bootstrap/: bootstrap-076de336b7c830c58c6d5a8ede0c56c8.min.css
