[project]
name = "mise-en-production-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "fastapi>=0.128.7",
    "pandas>=3.0.0",
    "pylint>=4.0.5",
    "python-dotenv>=1.2.1",
    "requests>=2.33.1",
    "ruff>=0.15.9",
    "s3fs>=2026.3.0",
    "scikit-learn>=1.8.0",
    "skops>=0.13.0",
    "spacy[transformers]>=3.8.14",
    "streamlit>=1.56.0",
    "uvicorn>=0.40.0",
]
